# api-semantic

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/api_semantic/: __init__.py  auth.py  bootstrap.py  config.py  embeddings.py  logging.py  main.py  schemas.py
tests/: test_api.py
